[gd_scene load_steps=3 format=3 uid="uid://cjd8qucpnvc4w"]

[ext_resource type="Script" path="res://scripts/main.gd" id="1_jhq3p"]
[ext_resource type="Texture2D" uid="uid://c08sq0iksmi6o" path="res://assets/textures/limbo_scenehelp.png" id="2_rt7dn"]

[node name="Main" type="Node"]
script = ExtResource("1_jhq3p")

[node name="DebugTimer" type="Timer" parent="."]
wait_time = 0.5
autostart = true

[node name="LimboScenehelp" type="Sprite2D" parent="."]
texture = ExtResource("2_rt7dn")
centered = false
metadata/_edit_lock_ = true

[node name="WinLoseDialog" type="AcceptDialog" parent="."]
disable_3d = true
title = "Limbo-godot"
initial_position = 1
size = Vector2i(232, 100)
unresizable = true
always_on_top = true
dialog_text = "You picked the WRONG key!"

[node name="ChangeSceneTimer" type="Timer" parent="."]
wait_time = 0.05
one_shot = true

[connection signal="timeout" from="DebugTimer" to="." method="_on_debug_timer_timeout"]
[connection signal="canceled" from="WinLoseDialog" to="." method="_on_win_lose_dialog_canceled"]
[connection signal="confirmed" from="WinLoseDialog" to="." method="_on_win_lose_dialog_confirmed"]
[connection signal="timeout" from="ChangeSceneTimer" to="." method="_on_change_scene_timer_timeout"]
